03_Project/src/test/resources/cocos/invalid/SamePlaceAndTransition.pn
petrinet SamePlaceAndTransition {
    place P1;

    transition Q:
        2 <- P1

    transition P1:
        1 -> P1
}